--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,10 @@ flutter:
   #  - images/a_dot_burr.jpeg
   #  - images/a_dot_ham.jpeg
 
+  assets:
+    - assets/database.db
+    - assets/chimple_logo.png
+
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.io/assets-and-images/#resolution-aware.
 
