--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,9 @@ dependencies:
   uuid: ^0.5.0
   path_provider: ^0.4.0
   tuple: ^1.0.1
+  firebase_database: ^0.4.1
+  firebase_storage: ^0.2.0
+
 
 dev_dependencies:
   flutter_test:
