--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,8 +8,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.0
-  image_picker:
-    path: image_picker
+  image_picker: ^0.4.0
   camera: ^0.1.1
   xmlstream: ^0.10.0
   sqflite: any
