--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,8 @@ flutter:
     - assets/database.db
     - assets/chimple_logo.png
     - assets/apple.png
+    - assets/Boy.png
+    - assets/imageCoordinatesInfo.json
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.io/assets-and-images/#resolution-aware.
