New image and json data added. Game Working but hard coded.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ flutter:
     - assets/Boy.png
     - assets/imageCoordinatesInfo.json
     - assets/apple.ogg
+    - assets/Shapes.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.io/assets-and-images/#resolution-aware.
