--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,15 +17,15 @@ dependencies:
   tuple: ^1.0.1
   firebase_database: ^0.4.1
   firebase_storage: ^0.2.0
-
+  json_annotation: ^0.2.2
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_driver:
     sdk: flutter
-
-
+  build_runner: ^0.7.6
+  json_serializable: ^0.3.2
 # For information on the generic Dart part of this file, see the
 # following page: https://www.dartlang.org/tools/pub/pubspec
 
