--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,7 @@ flutter:
     - assets/apple.png
     - assets/Boy.png
     - assets/imageCoordinatesInfo.json
+    - assets/imageCoordinatesInfo2.json
     - assets/apple.ogg
     - assets/Shapes.png
     - assets/animations/koala_happy.json
