--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -67,6 +67,7 @@ flutter:
     - assets/animations/test.json
     - assets/animations/heart.json
     - assets/animations/ball.json
+    - assets/rivescript/testsuite.rs
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.io/assets-and-images/#resolution-aware.
