--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,8 @@ flutter:
   assets:
     - assets/database.db
     - assets/chimple_logo.png
+    - assets/african_child.png
+    - assets/indian_child.png
     - assets/apple.png
     - assets/Boy.png
     - assets/Body.png
