--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -66,6 +66,8 @@ flutter:
     - assets/chat.png
     - assets/story.png
     - assets/Shapes.png
+    - assets/hoodie_fb.png
+    - assets/hoodie_bear.png
     - assets/koala_neutral.png
     - assets/koala_happy.png
     - assets/koala_sad.png
@@ -949,7 +951,7 @@ flutter:
     - assets/dict/tea.png
     - assets/dict/team.png
     - assets/dict/teapoy.png
-    - assets/dict/tears.png
+    - assets/dict/tear.png
     - assets/dict/teenager.png
     - assets/dict/teeth.png
     - assets/dict/television.png
