--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -110,6 +110,7 @@ flutter:
     - assets/hoodie/tap_home.png
     - assets/hoodie/tap_wrong.png
     - assets/hoodie/true_or_false.png
+    - assets/hoodie/picture_sentence.png
 
     #happy
     - assets/hoodie/reflex_happy.png
@@ -139,6 +140,7 @@ flutter:
     - assets/hoodie/tap_home_happy.png
     - assets/hoodie/tap_wrong_happy.png
     - assets/hoodie/true_or_false_happy.png
+    - assets/hoodie/picture_sentence_happy.png
 
     #sad
     - assets/hoodie/reflex_sad.png
@@ -169,6 +171,7 @@ flutter:
     - assets/hoodie/tap_wrong_sad.png
     - assets/hoodie/true_or_false_sad.png
     - assets/background_tile.png
+    - assets/hoodie/picture_sentence_sad.png
     # dictionary
     - assets/dict/aardvark.png
     - assets/dict/abdomen.png
