--- a/android/build.gradle
+++ b/android/build.gradle
@@ -17,6 +17,9 @@ allprojects {
         google()
         jcenter()
     }
+    configurations.all {
+        resolutionStrategy.force "com.android.support:support-v7:27.1.1"
+    }
 }
 
 rootProject.buildDir = '../build'
@@ -26,7 +29,17 @@ subprojects {
 subprojects {
     project.evaluationDependsOn(':app')
 }
-
+subprojects {
+    project.configurations.all {
+        resolutionStrategy.eachDependency { details ->
+            if (details.requested.group == 'com.android.support'
+                    && !details.requested.name.contains('multidex')
+            ) {
+                details.useVersion "27.1.1"
+            }
+        }
+    }
+}
 task clean(type: Delete) {
     delete rootProject.buildDir
 }
