--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,7 +8,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.0
-  image_picker: ^0.4.0
+  image_picker: ^0.4.4
   xmlstream: ^0.10.0
   sqflite: any
   uuid: ^0.5.0
@@ -21,6 +21,10 @@ dependencies:
   fluttie: ^0.2.1
   fluttery: "^0.0.6"
   flutter_circular_chart: "^0.0.3"
+  camera: 0.2.1
+  flores:
+    git:
+      https://github.com/chimple/flores.git
 dev_dependencies:
   flutter_test:
     sdk: flutter
