Added NSD support for chat

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -31,7 +31,7 @@
         android:name="io.flutter.app.FlutterApplication"
         android:label="maui"
         android:icon="@mipmap/ic_launcher">
-        <service android:name="org.chimple.flores.scheduler.WifiDirectIntentService" />
+        <service android:name="org.chimple.flores.scheduler.P2PIntentService" />
         <service
             android:name="org.chimple.flores.scheduler.P2PHandShakingJobService"
             android:exported="false"
