--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
   fluttie: ^0.2.1
   fluttery: "^0.0.6"
   flutter_circular_chart: "^0.0.3"
+  shared_preferences: ^0.4.2
   camera: 0.2.1
   flores:
     git:
