--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,8 @@ flutter:
     - assets/chimple_logo.png
     - assets/african_child.png
     - assets/indian_child.png
+    - assets/star.png
+    - assets/star_gained.png
     - assets/apple.png
     - assets/Boy.png
     - assets/Body.png
@@ -1117,6 +1119,7 @@ flutter:
     - assets/dict/zodiac.png
     - assets/dict/zoo.png
     - assets/dict/zucchini.png
+    - assets/star_music.mp3
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.io/assets-and-images/#resolution-aware.
 
