notification on message received. Also turn by turn was not going to opponent

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -55,5 +55,6 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
+        <activity android:name="org.chimple.flores.FloresPlugin$MessageReceivedActivity" android:exported="false"/>
     </application>
 </manifest>
