--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,8 +52,10 @@ flutter:
     - assets/solo.nima
     - assets/solo.png
     - assets/chimple_logo.png
-    - assets/african_child.png
-    - assets/indian_child.png
+    - assets/father.png
+    - assets/mother.png
+    - assets/sister.png
+    - assets/brother.png
     - assets/star.png
     - assets/star_gained.png
     - assets/apple.png
