edits to screen background

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,6 +2,7 @@ name: maui
 description: Literacy application for children
 
 dependencies:
+  flutter_sticky_header: "^0.1.0"
   flutter:
     sdk: flutter
 
