Added colour to user. Reformatted chat screen. Contains db changes

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1221,6 +1221,7 @@ flutter:
     - assets/stickers/pig/2.png
     - assets/stickers/pig/3.png
     - assets/stickers/pig/1.png
+    - assets/stickers/giraffe/giraffe.png
     - assets/stickers/giraffe/8.png
     - assets/stickers/giraffe/9.png
     - assets/stickers/giraffe/14.png
