--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -105,8 +105,8 @@ flutter:
     - assets/dice_game/paint.png
     - assets/dice_game/color_picker.png
     - assets/dice_game/color_brush.png
-    - assets/dice_game/dice4.gif
-    - assets/dice_game/tapme.png
+    - assets/dice_game/dice_play.gif
+    - assets/dice_game/tapto_play.gif
     - assets/background_image/reflex_small.png
     - assets/background_image/reflex_big.png
     - assets/background_image/dice_big.png
