--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dev_dependencies:
     sdk: flutter
   flutter_driver:
     sdk: flutter
+  video_player: "^0.5.4"
   build_runner: ^0.7.6
   json_serializable: ^0.3.2
 # For information on the generic Dart part of this file, see the
@@ -53,6 +54,7 @@ flutter:
   #  - images/a_dot_ham.jpeg
 
   assets:
+    - assets/demo_video/video.mp4
     - assets/database.db
     - assets/solo.nima
     - assets/solo.png
