--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -156,6 +156,8 @@ flutter:
     - assets/background_image/spin_wheel_small.png
     - assets/background_gif/Win_loop.gif
     - assets/chat_image/chat icon_01.png
+    - assets/chat_image/chat icon_04.png
+    - assets/chat_image/chat icon_03.png
     - assets/games.png
     - assets/chat.png
     - assets/chatBig.png
