--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -160,6 +160,7 @@ flutter:
     - assets/background_image/spin_wheel_small.png
     - assets/background_gif/Win_loop.gif
     - assets/chat_image/chat icon_01.png
+    - assets/chat_image/friend_background.png
     - assets/games.png
     - assets/chat.png
     - assets/chatBig.png
@@ -1385,6 +1386,22 @@ flutter:
     - assets/stickers/carpie/2.png
     - assets/stickers/carpie/3.png
     - assets/stickers/carpie/1.png
+    - assets/stickers/emoguy/angry.png
+    - assets/stickers/emoguy/cold.png
+    - assets/stickers/emoguy/cry.png
+    - assets/stickers/emoguy/happy.png
+    - assets/stickers/emoguy/irritated.png
+    - assets/stickers/emoguy/laughing.png
+    - assets/stickers/emoguy/love.png
+    - assets/stickers/emoguy/playing.png
+    - assets/stickers/emoguy/relaxed.png
+    - assets/stickers/emoguy/sad.png
+    - assets/stickers/emoguy/scared.png
+    - assets/stickers/emoguy/sleeping.png
+    - assets/stickers/emoguy/thumbsdown.png
+    - assets/stickers/emoguy/thumbsup.png
+    - assets/stickers/emoguy/workout.png
+    - assets/stickers/emoguy/yummy.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.io/assets-and-images/#resolution-aware.
