--- a/android/key.properties
+++ b/android/key.properties
@@ -1,4 +1,4 @@
 storePassword=chimple123
 keyPassword=chimple123
 keyAlias=chimple
-storeFile=/Users/srikanth/dev/GLEXP-Team-Chimple/goa/proj.android/playstore.jks
+storeFile=playstore.jks
