--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
   intl: 0.15.6
   intl_translation: 0.16.8
   simple_permissions: 0.1.5
+  flutter_svg: ^0.5.1
   flores:
     git:
       https://github.com/chimple/flores.git
