--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dev_dependencies:
   video_player: "^0.5.4"
   build_runner: ^0.7.6
   json_serializable: ^0.3.2
+  flutter_markdown: ^0.1.5
 # For information on the generic Dart part of this file, see the
 # following page: https://www.dartlang.org/tools/pub/pubspec
 
