--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,6 +59,7 @@ flutter:
   assets:
     - assets/right.wav
     - assets/wrong.wav
+    - assets/audio.wav
     
     - assets/tap.wav
     - assets/demo_video/video.mp4
