--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -208,6 +208,7 @@ flutter:
     - assets/animations/koala_sad.json
     - assets/animations/horse_sad2.json
     - assets/animations/goat_sad2.json
+    - assets/GameData.json
     - assets/animations/goat_sad3.json
     - assets/animations/zebra_face.json
     - assets/animations/happybirthday.json
