--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -63,7 +63,11 @@ flutter:
   assets:
     - assets/right.wav
     - assets/wrong.wav
-    - assets/audio.wav
+    - assets/lion.ogg
+    - assets/monkey.ogg
+    - assets/duck.ogg
+    - assets/fox.ogg
+    - assets/rabbit.ogg
     
     - assets/tap.wav
     - assets/demo_video/video.mp4
