Nima Animation added

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -153,6 +153,7 @@ flutter:
     - assets/stickers/carpie/
     - assets/stickers/emoguy/
     - assets/category/
+    - assets/nima_animation/
     - assets/team animals.svg
     - assets/topic/
     
