Added masking images

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -156,7 +156,7 @@ flutter:
     - assets/nima_animation/
     - assets/team animals.svg
     - assets/topic/
-    
+    - assets/masking/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.io/assets-and-images/#resolution-aware.
