--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   intl_translation: ^0.17.0
   simple_permissions: ^0.1.6
   flutter_svg: ^0.5.1
+  image: ^2.0.4
   flutter_localizations:
     sdk: flutter
 dev_dependencies:
@@ -43,6 +44,8 @@ dev_dependencies:
   flutter_markdown: ^0.2.0
   tahiti:
     path: ../tahiti
+  flores:
+    path: ../flores
 
 # For information on the generic Dart part of this file, see the
 # following page: https://www.dartlang.org/tools/pub/pubspec
