--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   simple_permissions: ^0.1.6
   flutter_svg: ^0.5.1
   image: ^2.0.4
+  flutter_redurx: ^0.4.3
   flutter_localizations:
     sdk: flutter
 dev_dependencies:
