--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -160,6 +160,7 @@ flutter:
     - assets/nima_animation/
     - assets/team animals.svg
     - assets/topic/
+    - assets/topic/asb/
     - assets/masking/
 
   # An image asset can refer to one or more resolution-specific "variants", see
