Fixes #965 Topic Progress sub-tab in Profile

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   tuple: ^1.0.1
   json_annotation: ^1.1.0
   audioplayers: ^0.7.5
+  percent_indicator: ^1.0.9
   fluttery:
     git:
       https://github.com/chimple/fluttery.git
