--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   json_annotation: ^2.0.0
   audioplayers: ^0.7.8
   percent_indicator: ^1.0.10
+  tinycolor: ^1.0.2
   fluttery:
     git:
       https://github.com/chimple/fluttery.git
