--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,7 +14,7 @@ dependencies:
   path_provider: ^0.4.1
   tuple: ^1.0.2
   json_annotation: ^2.0.0
-  audioplayers: ^0.7.8
+  audioplayer: ^0.5.2
   percent_indicator: ^1.0.10
   fluttery:
     git:
