--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -61,12 +61,15 @@
             </intent-filter>
         </receiver>
 
-        <receiver android:name="org.chimple.flores.OnAutoReceiver">
-            <intent-filter>
+        <receiver
+            android:name=".AutoLaunchReceiver"
+            android:enabled="true"
+            android:exported="true">
+            <intent-filter>                
                 <action android:name="android.intent.action.BOOT_COMPLETED" />
                 <action android:name="android.intent.action.ACTION_POWER_CONNECTED" />
-                <action android:name="android.intent.action.ACTION_POWER_DISCONNECTED" />                             
+                <action android:name="android.intent.action.ACTION_POWER_DISCONNECTED" />                
             </intent-filter>
-        </receiver>        
+        </receiver>
     </application>
 </manifest>
