--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dev_dependencies:
     sdk: flutter
   flutter_driver:
     sdk: flutter
+  test: 1.5.1
   video_player: "^0.7.2"
   build_runner: ^1.1.1
   json_serializable: ^2.0.0
