--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -105,6 +105,7 @@ flutter:
     - assets/audio/
     - assets/stories/story_audio/
     - assets/score/
+    - assets/background_flare/background.flr
 
 
   # An image asset can refer to one or more resolution-specific "variants", see
