Added top bar in home screen and some final UI changes in game UI.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -107,6 +107,7 @@ flutter:
     - assets/score/
     - assets/background_flare/
     - assets/hud/
+    - assets/home_screen_icons/
 
 
   # An image asset can refer to one or more resolution-specific "variants", see
