--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,7 +53,7 @@ dependencies:
   flores:
     path: ../flores
 dev_dependencies:
-  test: 
+  test: 1.6.1
   flutter_test:
     sdk: flutter
   flutter_driver:
