moved image to temp

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -120,6 +120,7 @@ flutter:
     - assets/home_screen_icons/
     - assets/topic/
     - assets/topic/asb/
+    - assets/temp/hospital.jpg
     
 
   # An image asset can refer to one or more resolution-specific "variants", see
